# huan

./: .gitignore
kdb/: CME_hist.py  IB_L1_Bar.py  IB_hist.py  KDB_hist.py  MTS_patch.py  README  bar_l1.py  exec5s.py  f0.py  ibbar.py  l1.py  l1_reader.py  ref  repo_dbar.py  sim.py  tests.py
models/: ica.py  pili.py  qr.py  qr_ica.py  rate.py  rate_est2.py  smc.py  smooth.py  vol_bucket.py
mts_src/: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.prod  CPack.package.cfg  changelog
mts_src/algo/: CMakeLists.txt
mts_src/config/: bpipe.cfg  main.cfg  main.cfg.uat  symbol_map.cfg
mts_src/config/bpipe/: F72C4A7872FB7BDD1206C92617123FDE.pk12
mts_src/config/risk/: risk.json  vs_5_15_60m.csv
mts_src/config/symbol/: calendars  fx_1500.txt  fx_1700.txt
mts_src/config/symbol/roll_details/: AUD.csv  BOBL.csv  BRL.csv  BTP.csv  BUXL.csv  Brent.csv  Bund.csv  CAC.csv  CAD.csv  CHF.csv  Canola.csv  Cocoa.csv  Coffee.csv  Corn.csv  Cotton.csv  DAX.csv  DJIA.csv  EUR.csv  FTSE.csv  FV.csv  GBP.csv  Gasoil.csv  Gilt.csv  Gold.csv  HGCopper.csv  HO.csv  JPY.csv  MES.csv  MW.csv  MXN.csv  MillingWheat.csv  NDX.csv  NG.csv  NZD.csv  OAT.csv  Palladium.csv  Platinum.csv  RBOB.csv  RUB.csv  Rapeseed.csv  (+14 more)
mts_src/config/symbol/upload/: assets.xml  spreads.xml
mts_src/config/symbol/upload/calendars/: AUD.csv  BOBL.csv  BRL.csv  BTP.csv  BUXL.csv  Brent.csv  Bund.csv  CAC.csv  CAD.csv  CHF.csv  Canola.csv  Cocoa.csv  Coffee.csv  Corn.csv  Cotton.csv  DAX.csv  DJIA.csv  EUR.csv  EuroStoxx.csv  EuroStoxx600.csv  FTSE.csv  FV.csv  FeederCattle.csv  GBP.csv  Gasoil.csv  Gilt.csv  Gold.csv  HGCopper.csv  (+39 more)
mts_src/md/: CMakeLists.txt  md_bar.h  md_bar_price.h  md_book.h  md_snap.h  snap_reader.cpp  td_parser.cpp  td_parser.h  tick_parser.cpp
mts_src/md/py/: make.sh  setup.py  td_parser_np.cpp
mts_src/md/test/: CMakeLists.txt  bookq_test.cpp  br_test.cpp  l1_pub.cpp
mts_src/pm/: CMakeLists.txt  FloorBase.h  FloorCPR.h  FloorManager.cpp  FloorManager.h  FloorManagerMain.cpp  PositionData.cpp  PositionData.h  PositionManager.cpp  PositionManager.h  RiskMonitor.cpp  RiskMonitor.h  TWAPTrader.cpp  flr.h
mts_src/pm/test/: CMakeLists.txt  risk_test.cpp
mts_src/python/: daily_update.py  daily_update_prod.py  launch.py  launch_md.py  mts_liquidity.py  mts_mtm_pnl.py  mts_repo.py  mts_run  repo_util.py  repo_util_test.py  symbol_map.py  sys_util.py  td2mts.py  tickdata_parser.py
mts_src/python/strategy/: idbo_ens.py
mts_src/python/strategy/ar1/: Outliers.py  new_md.py  pipeline_0.py  vol_bucket.py
mts_src/tp/: CMakeLists.txt
mts_src/tp/bpipe/: CMakeLists.txt  bbtp.cpp  bbtp.h  bbtp_test.cpp
mts_src/tp/bpipe/include/: blpapi_abstractsession.h  blpapi_constant.h  blpapi_dispatchtbl.h  blpapi_element.h  blpapi_event.h  blpapi_eventformatter.h  blpapi_message.h  blpapi_messageformatter.h  blpapi_name.h  blpapi_providersession.h  blpapi_request.h  blpapi_resolutionlist.h  blpapi_service.h  blpapi_session.h  blpapi_sessionoptions.h  blpapi_streamproxy.h  blpapi_subscriptionlist.h  blpapi_testutil.h  blpapi_topiclist.h  blpapi_types.h  blpapi_versionmacros.h
mts_src/tp/cpp/: CAlgorithmFIXTest.cpp  CAlgorithmFactory.cpp  CAlgorithmTemplate.cpp  CApplication.cpp  CApplicationLog.cpp  CBidAsk.cpp  CCircCharBuffer.cpp  CCircularScalarBuffer.cpp  CConfig.cpp  CConsolidatedPositionManager.cpp  CCurrncy.cpp  CDateTime.cpp  CDropCopyFIX_TT.cpp  CEmailer.cpp  CEngine.cpp  CEvent.cpp  CEventQueue.cpp  CExchange.cpp  CExchangeBroker.cpp  CExchangeFIX_TT.cpp  CExchangeFactory.cpp  CExchangeRecovery.cpp  CExecReport.cpp  CFIXEngine.cpp  CFeed.cpp  CFeedEnginePersistedTOB.cpp  CFeedFIX_TT.cpp  CFeedFactory.cpp  CFeedManager.cpp  CFeedTickDataTOB.cpp  CHeartbeat.cpp  CLog.cpp  CLogText.cpp  CLogUnorderedMap.cpp  CManualCommand.cpp  CMarketDataManager.cpp  CModel.cpp  CModelCpp.cpp  CModelFactory.cpp  CModelPython.cpp  (+18 more)
mts_src/tp/include/: CAlgorithm.h  CAlgorithm.hxx  CAlgorithmCommand.hxx  CAlgorithmFIXTest.h  CAlgorithmFactory.h  CAlgorithmTemplate.h  CApplication.h  CApplicationLog.h  CBidAsk.h  CCircCharBuffer.h  CCircCharBuffer.hxx  CCircularBuffer.h  CCircularBuffer.hxx  CCircularScalarBuffer.h  CConfig.h  CConsolidatedPositionManager.h  CCurrncy.h  CDateTime.h  CDateTime.hxx  CDateTimeEvent.h  CDateTimeEvent.hxx  CDateTimeLessThan.h  CEmailer.h  CEngine.h  CEvent.h  CEventQueue.h  CEventQueue.hxx  CExcept.h  CExchange.h  CExchangeBroker.h  CExchangeFIX_TT.h  CExchangeFactory.h  CExecReport.h  CExecReport.hxx  CFIXEngine.h  CFeed.h  CFeedEnginePersistedTOB.h  CFeedFIX_TT.h  CFeedManager.h  CFeedTickDataTOB.h  (+65 more)
mts_src/util/: AsyncUDPSender.h  CMakeLists.txt  DynamicBuffer.h  FixedBuffer.h  LogSpamBlocker.h  Version.h  csv_util.h  histogram.cc  histogram.h  instance_limiter.h  queue.h  rate_estimator.cpp  rate_estimator.h  rate_limiter.cpp  symbol_map.cpp  symbol_map.h  thread_utils.h  time_util.cpp  time_util.h
mts_src/util/plcc/: ConfigureReader.cpp  ConfigureReader.hpp  Logger.hpp  PLCC.hpp
mts_src/util/test/: CMakeLists.txt  csv_test.cpp
pyres/: BlockBanded.py  MultiLinalg.py  Outliers.py  PieceLinear.py  TraceInverse.py  Variance.py  poisson_rw.py
rb/: devutil.py  feat0.py  getdata.py
ref/: ref
(+67 files in other folders)
